--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
       </ul>
     </nav>
   </header>
+  <section class="hero">
+    <img src="images/IMG_3739.jpeg" alt="Happy patient">
+    <h1>Your Smile, Our Passion</h1>
+    <p>State-of-the-art dental care for the whole family.</p>
+    <button>Book Appointment</button>
+  </section>
+
   <main>
     <section id="about">
       <h1>Welcome to Aarogya Dental Clinic</h1>
@@ -30,6 +37,26 @@
         <li>Orthodontics</li>
         <li>Cosmetic dentistry</li>
       </ul>
+    </section>
+    <section id="gallery">
+      <h2>Gallery</h2>
+      <div class="gallery-images">
+        <img src="images/IMG_3740.jpeg" alt="Clinic reception">
+        <img src="images/IMG_3741.jpeg" alt="Dental equipment">
+        <img src="images/IMG_3742.jpeg" alt="Waiting area">
+      </div>
+    </section>
+    <section id="doctors">
+      <h2>Our Doctors</h2>
+      <img src="images/IMG_3744.jpeg" alt="Our lead dentist">
+      <p>Meet our experienced team committed to your oral health.</p>
+    </section>
+    <section id="testimonials">
+      <h2>Testimonials</h2>
+      <article class="testimonial">
+        <img src="images/IMG_3745.jpeg" alt="Satisfied patient">
+        <p>"The best dental care I've ever experienced!"</p>
+      </article>
     </section>
     <section id="contact">
       <h2>Contact Us</h2>
