Revise site sections and meta information

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aarogya Dental Clinic</title>
+  <meta name="description" content="Aarogya Dental Clinic provides comprehensive preventive, restorative, orthodontic and cosmetic dental care for the whole family in Bangalore." />
+  <meta name="keywords" content="Aarogya Dental Clinic, dentist, dental care, preventive dentistry, restorative dentistry, orthodontics, cosmetic dentistry" />
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,18 +23,24 @@
   <main>
     <section id="about">
       <h1>Welcome to Aarogya Dental Clinic</h1>
-      <p>Your smile is our priority. We provide comprehensive dental care for all ages.</p>
+      <p>At Aarogya Dental Clinic, we are committed to providing personalized, high-quality dental care in a comfortable and friendly environment. Our experienced dentists offer a full range of treatments to help you maintain a healthy, beautiful smile.</p>
     </section>
     <section id="services">
       <h2>Our Services</h2>
       <ul>
-        <li>Preventive checkups</li>
-        <li>Orthodontics</li>
-        <li>Cosmetic dentistry</li>
+        <li>Preventive checkups &amp; cleanings</li>
+        <li>Restorative treatments (fillings, crowns)</li>
+        <li>Orthodontics &amp; Invisalign</li>
+        <li>Cosmetic dentistry (whitening, veneers)</li>
       </ul>
     </section>
     <section id="contact">
       <h2>Contact Us</h2>
+      <p class="contact-info">
+        <strong>Phone:</strong> +91-98765-43210<br>
+        <strong>Address:</strong> 123 Sample Road, Bangalore, Karnataka 560001<br>
+        <strong>Hours:</strong> Mon–Sat 10:00 AM–7:00 PM
+      </p>
       <form id="contactForm">
         <label for="name">Name</label>
         <input id="name" type="text" required>
