Add hero, gallery, and doctors sections with images

--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
       </ul>
     </nav>
   </header>
+  <section id="hero" class="hero">
+    <h1>Healthy Smiles Start Here</h1>
+    <p>Personalized dental care for your whole family.</p>
+  </section>
   <main>
     <section id="about">
-      <h1>Welcome to Aarogya Dental Clinic</h1>
+      <h2>About Us</h2>
       <p>Your smile is our priority. We provide comprehensive dental care for all ages.</p>
     </section>
     <section id="services">
@@ -30,6 +34,27 @@
         <li>Orthodontics</li>
         <li>Cosmetic dentistry</li>
       </ul>
+    </section>
+    <section id="gallery" class="gallery">
+      <h2>Gallery</h2>
+      <div class="gallery-grid">
+        <img src="images/IMG_3740.jpeg" alt="Reception area of the clinic">
+        <img src="images/IMG_3741.jpeg" alt="Dental treatment room with equipment">
+        <img src="images/IMG_3742.jpeg" alt="Waiting lounge for patients">
+      </div>
+    </section>
+    <section id="doctors" class="doctors">
+      <h2>Our Doctors</h2>
+      <div class="doctors-grid">
+        <div class="doctor">
+          <img src="images/IMG_3744.jpeg" alt="Dr. Sharma examining a patient">
+          <p>Dr. Sharma</p>
+        </div>
+        <div class="doctor">
+          <img src="images/IMG_3745.jpeg" alt="Dr. Patel ready for consultation">
+          <p>Dr. Patel</p>
+        </div>
+      </div>
     </section>
     <section id="contact">
       <h2>Contact Us</h2>
