--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="header">
     <img src="images/aarogya_dental_logo.png" alt="Aarogya Dental Clinic logo" class="logo">
     <nav class="nav" id="nav">
-      <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">&#9776;</button>
+      <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation" aria-expanded="false">&#9776;</button>
       <ul class="nav-list">
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
